<resources>
    <string name="app_name">StudentGradeProject</string>
    <string name="studentname_text_view"></string>
    <string name="gradeaverage_text_view"></string>
    <string name="display_button">Display Student Grade Average</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="gradedetails_button">GRADE DETAILS</string>
    <string name="student_id_text_view"> Student Id</string>
    <string name="student_fname_text_view"> Student F Name</string>
    <string name="student_lname_text_view"> Student L Name</string>
    <string name="s_grade_Assignment1_text_view"> Grade Ass 1</string>
    <string name="s_grade_Assignment2_text_view"> Grade Ass 2</string>
    <string name="s_grade_Assignment3_text_view"> Grade Ass 3</string>
    <string name="s_grade_Mid_Term_text_view"> Grade Mid Term</string>
    <string name="s_grade_Final_Term_text_view"> Grade Final Term</string>
    <string name="student_id_edit_text">a</string>
    <string name="student_fname_edit_text">b</string>
    <string name="student_lname_edit_text">c</string>
    <string name="s_grade_Assignment1_edit_text">d</string>
    <string name="s_grade_Assignment2_edit_text">e</string>
    <string name="s_grade_Assignment3_edit_text">f</string>
    <string name="s_grade_Mid_Term_edit_text">g</string>
    <string name="s_grade_Final_Term_edit_text">h</string>
    <string name="student_grade_update_button">STUDENT/GRADE UPDATE</string>

</resources>