<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentGradeActivity">

    <TextView
        android:id="@+id/student_id_text_view"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/student_id_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/student_id_edit_text"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/student_id_edit_text"
        android:inputType="textPersonName"
        android:text="@string/student_id_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/student_id_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/student_fname_text_view"
        android:layout_width="140dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/student_fname_text_view"
        app:layout_constraintEnd_toEndOf="@+id/student_id_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/student_id_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_id_text_view" />

    <TextView
        android:id="@+id/student_lname_text_view"
        android:layout_width="141dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:text="@string/student_lname_text_view"
        app:layout_constraintEnd_toEndOf="@+id/student_fname_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/student_fname_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_fname_text_view" />

    <TextView
        android:id="@+id/s_grade_Assignment1_text_view"
        android:layout_width="143dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/s_grade_Assignment1_text_view"
        app:layout_constraintEnd_toEndOf="@+id/student_lname_text_view"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/student_lname_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_lname_text_view" />

    <TextView
        android:id="@+id/s_grade_Assignment2_text_view"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/s_grade_Assignment2_text_view"
        app:layout_constraintEnd_toEndOf="@+id/s_grade_Assignment1_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/s_grade_Assignment1_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Assignment1_text_view" />

    <TextView
        android:id="@+id/s_grade_Assignment3_text_view"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:text="@string/s_grade_Assignment3_text_view"
        app:layout_constraintEnd_toEndOf="@+id/s_grade_Assignment2_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/s_grade_Assignment2_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Assignment2_text_view" />

    <TextView
        android:id="@+id/s_grade_Mid_Term_text_view"
        android:layout_width="139dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/s_grade_Mid_Term_text_view"
        app:layout_constraintEnd_toEndOf="@+id/s_grade_Assignment3_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/s_grade_Assignment3_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Assignment3_text_view" />

    <TextView
        android:id="@+id/s_grade_Final_Term_text_view"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:text="@string/s_grade_Final_Term_text_view"
        app:layout_constraintEnd_toEndOf="@+id/s_grade_Mid_Term_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/s_grade_Mid_Term_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Mid_Term_text_view" />

    <EditText
        android:id="@+id/student_fname_edit_text"
        android:layout_width="226dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/student_fname_edit_text"
        android:inputType="textPersonName"
        android:text="@string/student_fname_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/student_fname_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_id_edit_text" />

    <EditText
        android:id="@+id/student_lname_edit_text"
        android:layout_width="236dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/student_lname_edit_text"
        android:inputType="textPersonName"
        android:text="@string/student_lname_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toEndOf="@+id/student_lname_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_fname_edit_text" />

    <EditText
        android:id="@+id/s_grade_Assignment1_edit_text"
        android:layout_width="203dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/s_grade_Assignment1_edit_text"
        android:inputType="textPersonName"
        android:text="@string/s_grade_Assignment1_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/s_grade_Assignment1_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_lname_edit_text" />

    <EditText
        android:id="@+id/s_grade_Assignment2_edit_text"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/s_grade_Assignment2_edit_text"
        android:inputType="textPersonName"
        android:text="@string/s_grade_Assignment2_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toEndOf="@+id/s_grade_Assignment2_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Assignment1_edit_text" />

    <EditText
        android:id="@+id/s_grade_Assignment3_edit_text"
        android:layout_width="207dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/s_grade_Assignment3_edit_text"
        android:inputType="textPersonName"
        android:text="@string/s_grade_Assignment3_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@+id/s_grade_Assignment3_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Assignment2_edit_text" />

    <EditText
        android:id="@+id/s_grade_Mid_Term_edit_text"
        android:layout_width="215dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/s_grade_Mid_Term_edit_text"
        android:inputType="textPersonName"
        android:text="@string/s_grade_Mid_Term_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toEndOf="@+id/s_grade_Mid_Term_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Assignment3_edit_text" />

    <EditText
        android:id="@+id/s_grade_Final_Term_edit_text"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/s_grade_Final_Term_edit_text"
        android:inputType="textPersonName"
        android:text="@string/s_grade_Final_Term_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toEndOf="@+id/s_grade_Final_Term_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Mid_Term_edit_text" />

    <Button
        android:id="@+id/student_grade_update_button"
        android:layout_width="288dp"
        android:layout_height="63dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:text="@string/student_grade_update_button"
        app:layout_constraintEnd_toEndOf="@+id/s_grade_Final_Term_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/s_grade_Final_Term_text_view"
        app:layout_constraintTop_toBottomOf="@+id/s_grade_Final_Term_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>